# voice-chat.server

./: README.md  pyproject.toml
app/: main.py
app/core/: config.py
app/dto/: sdp.py
app/routing/: __init__.py
app/routing/rest/: hello.py  index.py  offer.py  test_client.py
app/routing/websocket/: signal.py  voice.py
app/static/templates/: index.html
