[project]
name = "voice-chat-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.13",
    "aiortc>=1.13.0",
    "alembic>=1.16.2",
    "fastapi[standard]>=0.115.13",
    "pydantic-settings>=2.9.1",
    "sqlalchemy>=2.0.41",
    "starlette>=0.46.2",
]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]
